--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 parameters:
   kre-image-tag:
     type: string
-    default: "latest"
+    default: "9-latest"
   agent-download-link:
     type: string
     default: ""
@@ -17,65 +17,46 @@ parameters:
     type: string
     default: ""
 
+orbs:
+  slack: circleci/slack@4.12.6
+
+slack_notify: &slack_notify
+  slack/notify:
+    event: fail
+    template: basic_fail_1
+setup_slack_mentions: &setup_slack_mentions
+  run:
+    name: setup $SLACK_PARAM_MENTIONS
+    command: |
+      echo "export SLACK_PARAM_MENTIONS='$(printenv "GH_USER_${CIRCLE_USERNAME//-/__DASH__}")'" >> "$BASH_ENV"
+
 jobs:
-  katalon-test:
+  katalon-studio-run:
     docker:
-      - image: katalonstudio/katalon:<< pipeline.parameters.kre-image-tag >>
-    environment:
-      AGENT_DOWNLOAD_LINK: << pipeline.parameters.agent-download-link >>
-      JOB_INFO: << pipeline.parameters.job-info >>
-      SERVER_URL: << pipeline.parameters.server-url >>
+      - image: katalonstudio/katalon:9-latest 
+    
     steps:
+      - *setup_slack_mentions
+      - checkout
       - run:
-          name: Run Katalon Test
+          name: Regression Tests
           command: |
-            set -x
-            set -o nounset
-
-            echo "Checking Katalon network connection"
-            curl -v -m 10 $SERVER_URL/info
-
-            echo "Upgrading environments"
-            echo "Upgrade Google Chrome"
-            chrome_package='google-chrome-stable_current_amd64.deb'
-            wget -O $chrome_package  https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-            dpkg -i $chrome_package || apt -y -f install
-            
-            echo "Wrap Chrome binary"
-            WRAPPER_PATH=$(readlink -f /usr/bin/google-chrome)
-            BASE_PATH="$WRAPPER_PATH-base"
-            mv "$WRAPPER_PATH" "$BASE_PATH"
-            
-            cat > "$WRAPPER_PATH" \<<_EOF
-            #!/bin/bash
-            # Note: exec -a below is a bashism.
-            exec -a "\$0" "$BASE_PATH" --no-sandbox "\$@"
-            _EOF
-            chmod +x "$WRAPPER_PATH"
-            
-            echo "$(google-chrome --version)" >> $KATALON_VERSION_FILE || true
-
-            echo "Installing Katalon agent"
-            mkdir /agent && cd /agent
-            wget -O agent "${AGENT_DOWNLOAD_LINK}"
-            echo "${JOB_INFO}" >> job.json
-
-            set +x
-            echo "<< pipeline.parameters.agent-config >>" >> agentconfig
-            set -x
-            
-            cat agentconfig
-            chmod 777 *
-            ls -al
-
-            echo "Executing test"
-            xvfb-run -s "-screen 0 $DISPLAY_CONFIGURATION" ./agent start-agent --ci
-            ret_code=$?
-            
-            exit $ret_code
-
+            katalonc.sh -apiKey="$KATALON_API_KEY" -browserType="Chrome" \
+              -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Regression" \
+              -projectPath="./" --config -webui.autoUpdateDrivers=true
+      - run:    
+          name: UI Tests
+          command: |
+            katalonc.sh -apiKey="$KATALON_API_KEY" -browserType="Chrome" \
+              -retry=0 -statusDelay=15 -testSuitePath="Test Suites/UI" \
+              -projectPath="./" --config -webui.autoUpdateDrivers=true
+      - store_artifacts:
+          path: Reports
+      - store_test_results:
+          path: Reports
+      - *slack_notify
 workflows:
-  version: 2.1
-  build_and_test:
+  build:
     jobs:
-      - katalon-test
+      - katalon-studio-run:
+          context: org-global
