--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,13 +43,13 @@ jobs:
           command: |
             katalonc.sh -apiKey="$KATALON_API_KEY" -browserType="Chrome" \
               -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Regression" \
-              -projectPath="./" --config -webui.autoUpdateDrivers=true
-      - run:    
-          name: UI Tests
-          command: |
-            katalonc.sh -apiKey="$KATALON_API_KEY" -browserType="Chrome" \
-              -retry=0 -statusDelay=15 -testSuitePath="Test Suites/UI" \
-              -projectPath="./" --config -webui.autoUpdateDrivers=true
+              -projectPath="" --config -webui.autoUpdateDrivers=true
+ #     - run:    
+ #         name: UI Tests
+ #         command: |
+ #          katalonc.sh -apiKey="$KATALON_API_KEY" -browserType="Chrome" \
+ #             -retry=0 -statusDelay=15 -testSuitePath="Test Suites/UI" \
+#            -projectPath="./" --config -webui.autoUpdateDrivers=true
       - store_artifacts:
           path: Reports
       - store_test_results:
