--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           command: |
             katalonc.sh -apiKey="$KATALON_API_KEY" -browserType="Chrome" \
               -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Regression" \
- #             -projectPath= "" --config -webui.autoUpdateDrivers=true
+             -projectPath= "project" --config -webui.autoUpdateDrivers=true
  #     - run:    
  #         name: UI Tests
  #         command: |
