--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           name: Regression Tests
           command: |
             katalonc.sh -apiKey="$KATALON_API_KEY" -browserType="Chrome" \
-              -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Regression" \
+              -retry=0 -statusDelay=15 -testSuitePath="Test Suites/Smoke" \
               -projectPath="./" --config -webui.autoUpdateDrivers=true \
               -testOps.projectId="$TESTOPS_PROJECT_ID" \
               -testOps.serverUrl="$TESTOPS_SERVER_URL"
